--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "itask",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.7",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
